--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: zerodrink.dcreative.cz
     restart: "always"
     volumes:
-      - ./:/static:ro
+      - ./web:/static:ro
     labels:
       - "traefik.http.routers.zerodrink_https.rule=Host(`zerodrink.dcreative.cz`)"
       - "traefik.http.routers.zerodrink_https.entrypoints=websecure"
